<resources>
    <string name="app_name">Evaluation01</string>
    <string name="title">Simple Calculator</string>
    <string name="Hint1">Enter A</string>
    <string name="Hint2">Enter B</string>
    <string name="operator">%s</string>
    <string name="operationLabel">Operation:</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="division">Divide</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
</resources>